<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="password2">确认密码：</string>
    <string name="login">登录</string>
    <string name="zhuce">注册</string>
    <string name="fanhui">返回</string>
    <string name="youxiang">邮箱</string>
    <string name="phonenumber">手机号码</string>
    <string name="beizhu">备注</string>
    
    <string name="title_activity_test">TestActivity</string>
 

</resources>