<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 个人信息 -->

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="请填写个人信息"
        android:textColor="#000093"
        android:textSize="18sp" />
    
    
    <!-- 用户名 -->

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:layout_marginTop="15dp"
        android:text="@string/username"
        android:textSize="18sp" />
    <!-- 编辑框 -->

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv1"
        android:layout_toRightOf="@id/tv1"
        android:maxLength="10"
        android:hint="请输入用户名" />
    
    <!-- 密码 -->

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="18sp" />
    
    <!-- 编辑框 -->

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv2"
        android:layout_alignLeft="@id/et1"
        android:layout_toRightOf="@id/tv2"
        android:inputType="textPassword"
        android:maxLength="14"
        android:hint="请输入密码" />
    
    <TextView 
        android:id="@+id/xianshimm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="250dp"
        android:text="显示密码"
        android:textSize="10sp"/>
    
        <!-- 确认密码 -->

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2"
        android:layout_marginTop="30dp"
        android:text="@string/password2"
        android:textSize="18sp" />
    
    <!-- 编辑框 -->

    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv3"
        android:inputType="textPassword"
        android:layout_alignLeft="@id/et1"
        android:layout_toRightOf="@id/tv2"
        android:maxLength="14"
        android:hint="请确认密码" />
    
    <TextView 
        android:id="@+id/mimayanse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="290dp"
        android:text=""
        android:textSize="13sp"/>
    <!-- 邮箱-->
      <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv3"
        android:layout_marginTop="40dp"
        android:text="@string/youxiang"
        android:textSize="18sp" />
    
    <!-- 编辑框-->

    <EditText
        android:id="@+id/et4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv4"
        android:layout_alignLeft="@id/et1"
        android:layout_toRightOf="@id/tv2"
        android:inputType="textEmailAddress"
        android:hint="请输入合法邮箱" />
    <!-- 手机号码 -->
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv4"
        android:layout_marginTop="20dp"
        android:text="@string/phonenumber"
        android:textSize="18sp" />
    
    <!-- 编辑框 -->

    <EditText
        android:id="@+id/et5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv5"
        android:layout_alignLeft="@id/et1"
        android:layout_toRightOf="@id/tv2"
        android:hint="请输入手机号码" />
    <!--备注  -->
    
       <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv5"
        android:layout_marginTop="20dp"
        android:text="@string/beizhu"
        android:textSize="18sp" />
    
    <!-- 编辑框 -->

    <EditText
        android:id="@+id/et6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv6"
        android:layout_alignLeft="@id/et1"
        android:layout_toRightOf="@id/tv2"
        android:maxLines="500"
        android:hint="500字以内" />
    
    <Button 
        android:id="@+id/queren01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv6"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:text="确认"/>
    <Button 
        android:id="@+id/fanhui1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv6"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="200dp"
        android:text="@string/fanhui"/>

</RelativeLayout>