<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 用户名 -->

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:layout_marginTop="100dp"
        android:text="@string/username"
        android:textSize="18sp" />
    <!-- 编辑框 -->

    <EditText
        android:id="@+id/ety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv1"
        android:layout_marginTop="200dp"
        android:layout_toRightOf="@id/tv1"
        android:hint="请输入用户名" />
    <!-- 密码 -->

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="18sp" />

    <!-- 编辑框 -->

    <EditText
        android:id="@+id/etm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv2"
        android:layout_alignLeft="@id/et1"
        android:layout_toRightOf="@id/tv2"
        android:hint="请输入密码" />

    <Button
        android:id="@+id/denglu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="200dp"
        android:text="登录" />

    <Button
        android:id="@+id/zc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="200dp"
        android:text="@string/zhuce" />

    <TextView 
        android:id="@+id/xs1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="150dp"
        android:text=""
        android:textSize="20sp" />

</RelativeLayout>